apps/vaultwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    cert-manager-tls: vaultwarden
