apps/vaultwarden/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 3012
    targetPort: websocket
    protocol: TCP
    name: websocket
  selector:
    app.kubernetes.io/name: vaultwarden
